# cargo-cult-project

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rust-config.EXAMPLE.toml  rust-config.toml
.github/workflows/: rust.yml
local-registry/: SOURCE  cargo-local-registry.crate
local-registry/cargo-local-registry-0.2.7/: .cargo_vcs_info.json  Cargo.toml
src/: copied.rs  crates_README.md  lib.rs  main.rs  resources.rs  targets.rs  tests.rs
src/install/: install.fish  install.ps1  install.sh
src/install/7Zip4Powershell/2.7.0/: 7Zip4PowerShell.deps.json  7Zip4Powershell.psd1  PSGetModuleInfo.xml
src/template/: Cargo.toml  build.sh  rust-toolchain.toml  template.Cargo.toml
