[package]
name = "rust-pkg-gen"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AverseABFun/rust-pkg-gen"
homepage = "https://github.com/AverseABFun/rust-pkg-gen"
authors = ["Arthur Beck <averse.abfun@gmail.com>"]

[dependencies]
anyhow = "1.0.94"
cargo-local-registry = { version = "0.2.7", artifact = "bin" }
clap = { version = "4.5.23", features = ["derive"] }
clap_complete = "4.5.38"
clap_mangen = "0.2.24"
dialoguer = "0.11.0"
filebuffer = "1.0.0"
hex = "0.4.3"
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
rust-embed = "8.5.0"
serde = { version = "1.0.215", features = ["derive"] }
sha2 = "0.10.8"
toml = "0.8.19"
url = "2.5.4"

[profile.release]
opt-level = "s"
debug-assertions = false # required to change the default behavior of --temp-dir

[dev-dependencies]
proptest = "1.5.0"
