[package]
name = "rust-pkg-gen"
version = "1.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Creates so-called rust 'packages' containing rust toolchains and crates."
repository = "https://github.com/AverseABFun/rust-pkg-gen"
homepage = "https://github.com/AverseABFun/rust-pkg-gen"
authors = ["Arthur Beck <averse.abfun@gmail.com>"]
readme = "README.md"
exclude = [
    "/.github/**",
    "/.vscode/**",
    "/rust-config.toml", # don't need the example
]

[dependencies]
anyhow = "1.0.94"
cargo-local-registry = { version = "0.2.7", artifact = "bin" }
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
clap_complete = "4.5.38"
clap_mangen = "0.2.24"
dialoguer = "0.11.0"
env_logger = "0.11.6"
filebuffer = "1.0.0"
flate2 = "1.0.35"
hex = "0.4.3"
log = { version = "0.4.22", features = ["std"] }
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
rust-embed = "8.5.0"
serde = { version = "1.0.215", features = ["derive"] }
sha2 = "0.10.8"
tar = "0.4.43"
toml = "0.8.19"
url = "2.5.4"

[profile.release]
opt-level = "s"
debug-assertions = false # required to change the default value of --temp-dir

[dev-dependencies]
proptest = "1.5.0"
